# nocr

./: Cargo.toml
.github/workflows/: build.yml
src/: language.rs  main.rs  ocr_bridge.swift
