[package]
name = "nocr"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "nocr"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "webp"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cc = "1"
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
] }